fix spacing for texh-stack

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -72,7 +72,7 @@ $fw-semibold: 500;
 $fw-bold: 700;
 
 // Font Size
-$fs-100: 0.43rem;
+$fs-100: 0.55rem;
 $fs-200: 1.1rem;
 $fs-300: 1.3rem;
 $fs-400: 1.5rem;
@@ -331,6 +331,7 @@ nav {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+
 }
 
 .about__text {
@@ -359,13 +360,14 @@ nav {
 }
 
 .grid {
-        padding: 1rem;
         display: grid;
         grid-template-columns: 1fr 1fr;
+        gap: 0.3rem;
+        padding-top: 1rem;
 
         .grid__items {
   
-            padding: 0.5rem;
+            
 
 
             p {
